# todos-lists-api

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Procfile  README.md  docker-compose.yml  requirements.txt  setup.cfg
.github/workflows/: codeql-analysis.yml  main.yml
src/: app.py  daos.py  db.py  models.py  resources.py
src/todos_lists_api/: app.py  auth.py  daos.py  resources.py
test/: acceptance.py  test_app.py
tests/: acceptance.py  test_app.py
