[metadata]
name = todos_lists_api
version = 0.0.1
author = Rodrigo García
author_email = yo@rodrigogarcia.me
description =  Todos Lists API using Flask and PyMongo 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rodrigo-garcia-leon/todos-lists-api
project_urls =
    Bug Tracker = https://github.com/rodrigo-garcia-leon/todos-lists-api/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src